change all file paths to img

--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 	.container {
-		width: 300px;
+		width: 320px;
 		margin: 25px auto;
 	}
 
@@ -21,7 +21,7 @@ h1:hover {
 
 /*HEADER*/
 	.coreNavigation {
-		background-image: url("../img/logo-unsplash.png");
+		background-image: url("img/logo-unsplash.png");
 		font-family: 'Oswald', 'Helvetica', 'Arial', 'sans-serif';
 		font-weight: 700; 
 		display: flex;
