--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,310 @@
-html {
-  background: #f09115;
+header {
+  background:#222222;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
+
+/***** LOGO *****/
+.logo img {
+  height: 120px;
+  padding: 12px;
+}
+
+/*** HAMBURGER ***/
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 30px;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+  background: #fff;
+}
+
+/*** TOP NAV MENU ***/
+nav {
+  display: none;  /*turned off by default since "Mobile First"*/
+}
+
+nav a {
+  margin-left: 20px;
+}
+
+
+
+/************************************ General formatting ************************************/
+
+html, body {
+  background: #222222;
   color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+}
+
+
+.big-news-container img, .small-news-container img {
+  box-shadow: 10px 10px #1b1b1b;      /*Box-shadow on all article images (not logo img)*/
+}
+
+h1 {
+  font-size: 32px;
+  line-height: 32px;
+  text-align: left;
+  padding-bottom: 15px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
+}
+
+h2 {
+  font-size: 20px;
+  line-height: 26px;
+  text-align: left;
+  margin-top: 15px;
+  margin-bottom: 5px;
+}
+
+h1, h2 {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+a h1:hover, a h2:hover, nav a:hover, .read-more a:hover {
+  color: rgb(255, 174, 0);
+  text-decoration: underline;
+}
+
+/************************************ THE BIG NEWS ************************************/
+
+.big-news-container {
+  background:#222222;
+  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+
+.big-news-image {
+  flex-wrap: wrap;
+  width: 100%;
+  background: #222222;
+  padding: 10px;
+  flex-grow: 1;
+  flex-basis: 60%;
+  box-sizing: border-box;
+  display:flex;
+}
+
+.big-news-text .article-preview {   /*styles the article textbox, excluding the headline*/
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 0px;
+  font-size: 16px;
+  line-height: 22px;
+  width: 100%;
+  height: 450px;
+  background:#222222;
+  flex-grow: 1;
+  flex-basis: 50%;
+  box-sizing: border-box;
+  max-height: 500px;
+  overflow: hidden;     /*cuts off article text, preventing overflow*/
+  min-width: 1px;
+}
+
+.big-news-text .read-more{    /*styles the read more link*/
+  margin-top: 30px;
+  text-align: right;
+}
+
+.big-news-image img {
+  width: 100%;
+  background: rgb(0, 0, 0);
+  object-fit: cover;         /*scales the image to fit the container!*/
+  border-radius: 2%;
+}
+
+/************************************ THE SMALL NEWS ************************************/
+
+.small-news-container {
+  background: #222222;
+  color: #fff;
+  display: flex;
+  justify-content: left;
+  flex-direction: column;
+  padding: 0px;
+}
+
+.small-news {
+  background: #222222;;
+  padding: 0px;
+  margin: 10px;
+  flex-grow: 1;
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+}
+
+.small-news a {
+  padding: 10px;
+}
+
+.small-news img {
+  display: block;
+  width: 100%;
+  height: 300px;
+  min-width: 60%;
+  max-width: 100%;
+  background: #222222;
+  object-fit: cover;      /*scales the image to fit the container!*/
+  border-radius: 3%;
+}
+
+
+
+/************************************ MEDIA QUERIES ************************************/
+
+/*************** Tablet responsiveness layout ***************/
+
+@media (min-width: 650px){
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  h1 {
+    text-align: left;
+  }
+
+  h2 {
+    text-align: left;
+  }
+
+  nav {               
+    display: inline-block;      /*makes the top nav menu visible!*/
+  }
+
+  .hamburger {
+    display: none;
+  }
+    
+  .big-news-container{
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .big-news-image {
+    box-sizing: border-box;
+    flex-grow: 0;
+    flex-basis: 50%;
+  }
+
+  .big-news-text {
+    width: 50%;
+  }
+
+  .big-news-image img {
+    height: 400px;
+  }
+
+  .small-news-container{
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .small-news {
+    box-sizing: border-box;
+    flex-grow: 1;
+    flex-basis: 40%;
+  }
+
+  .small-news img {
+    width: 400px;
+    height: 300px;
+  }
+}
+
+/*************** Desktop responsiveness layout ***************/
+
+@media (min-width: 900px){
+  header {
+    display: flex;
+  }
+  
+  h1 {
+    text-align: left;
+  }
+
+  h2 {
+    text-align: left;
+  }
+
+  nav {
+    display: inline-block;          /*makes the top nav menu visible!*/
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .big-news-container{
+    flex-direction: row;
+    justify-content: flex-start;
+    max-height: 1300px;
+    max-width: 1300px;
+  }
+
+  .big-news-image {
+    box-sizing: border-box;
+    flex-grow: 1;
+    flex-basis: 40%;
+  }
+
+  .big-news-image img {
+    height: 600px;
+
+  }
+
+  .big-news-text {
+    font-size: 18px;
+    line-height: 22px;
+    flex-wrap: wrap;
+    width: 100%;
+    background: #222222;
+    padding: 0px 10px 0px 10px;
+    flex-grow: 1;
+    flex-basis: 40%;
+    box-sizing: border-box;
+    max-height: 600px;
+    max-width: 9999px;
+  }
+
+  .small-news-container{
+    flex-direction: row;
+  }
+
+  .small-news {
+    box-sizing: border-box;
+    flex-grow: 1;
+    flex-basis: 23%;
+  }
+  
+  .small-news img {
+    width: 400px;
+    height: 300px;
+  }
+
+
 }
